<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
	android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context=".MainActivity" >

    <TextView    
        android:id="@+id/screen_name"
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:textSize="30sp"
    	android:alpha="0.5"
        android:text="@string/create_a_task" />
	
	<EditText android:id="@+id/task_short_description"
		android:layout_below="@id/screen_name"
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
        android:hint="@string/task_short_description" />
	
	<LinearLayout
	    android:id="@+id/date_viewgroup"
	    android:layout_below="@id/task_short_description"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
	    android:weightSum="1.0" >
	    
		<EditText android:id="@+id/from_date_text"
		   android:layout_width="0dp" 
            android:layout_height="wrap_content" 
            android:layout_weight=".35"
	    	android:inputType="date"
	    	android:alpha="0.5"
	        android:hint="@string/from_date_text" />
		<Button
		    android:id = "@+id/fromDateButton"
			android:layout_width="0dp" 
            android:layout_height="wrap_content" 
            android:layout_weight=".15"
            android:textSize="8.5sp"
		    android:text="@string/button_from_date"
		    android:onClick="fromDateDialog" />
		
		<EditText android:id="@+id/to_date_text"
			android:layout_width="0dp" 
            android:layout_height="wrap_content" 
            android:layout_weight=".35"
	        android:inputType="date"
	    	android:alpha="0.5"
	        android:hint="@string/to_date_text"  />
		<Button
		    android:id = "@+id/toDateButton"
			android:layout_width="0dp" 
            android:layout_height="wrap_content" 
            android:layout_weight=".15"
            android:textSize="8.5sp"
		    android:text="@string/button_to_date"
		    android:onClick="toDateDialog" />
		
	 </LinearLayout>
	 
	 <Spinner
	    android:id="@+id/choice_spinner"
	    android:layout_below="@id/date_viewgroup"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" />
</RelativeLayout>